--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
 applications:
 - disk_quota: 512M
-  domain: apps.cloud.gov
-  host: 18f-projects
+  # domain: apps.cloud.gov
+  host: rhode-island-projects
   instances: 1
   memory: 512M
   name: 18f-projects
   stack: cflinuxfs2
   buildpack: https://github.com/cloudfoundry/python-buildpack
   services:
-    - projects-db
+    - ri-etss-projects
