--- a/migration_manifest.yml
+++ b/migration_manifest.yml
@@ -1,11 +1,13 @@
 applications:
 - disk_quota: 512M
   # domain: apps.cloud.gov
-  host: rhode-island-projects
-  instances: 1
+  # host: rhode-island-projects
+  # instances: 1
   memory: 512M
-  name: rhode-island-projects
+  name: rhode-island-projects-migrate
+  no-route: true
   stack: cflinuxfs2
+  command: (python manage.py migrate && echo SUCCESS || echo FAIL) && sleep infinity
   buildpack: https://github.com/cloudfoundry/python-buildpack
   services:
     - rhode-island-projects-db
