--- a/.pylintrc
+++ b/.pylintrc
@@ -73,7 +73,7 @@ disable=print-statement,old-octal-literal,old-division,standarderror-builtin,cmp
 # Set the output format. Available formats are text, parseable, colorized, msvs
 # (visual studio) and html. You can also give a reporter class, eg
 # mypackage.mymodule.MyReporterClass.
-output-format=html
+output-format=colorized
 
 # Put messages in a separate file for each module / package specified on the
 # command line instead of printing them on stdout. Reports (if any) will be
