--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ env:
   - TRAVIS_NODE_VERSION="4.4"
 install:
   - pip install -r requirements.txt
+before_script:
+  - npm i -g http-server phantomjs pa11y pa11y-reporter-ci
+
 script:
   # - pylint --rcfile=.pylintrc
+  - nohup http-server -p 8080 >/dev/null 2>&1 &
+  - pa11y localhost:8080 -r ci -s WCAG2AAA
   - python manage.py test --nomigrations
