--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 appnope==0.1.0
 backports.shutil-get-terminal-size==1.0.0
-bandit==1.1.0
+bandit>=1.1.0
 boto3==1.3.1
 botocore==1.4.21
 decorator==4.0.9
