--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==4.0.9
 dj-database-url==0.4.1
 Django==1.10.2
 django-test-without-migrations==0.4
+django-tables2==1.2.6
 docutils==0.12
 flake8==2.5.4
 gnureadline==6.3.3
